deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: genesis
  labels:
    app.kubernetes.io/part-of: minestation
    app.kubernetes.io/name: genesis
